--- a/netlify.toml
+++ b/netlify.toml
@@ -1,1 +1,8 @@
 
+[[redirects]]
+  from = "/index.html"
+  to = "/contact.html"
+  status = 301
+  force = false
+  query = {path = ":path"}
+  conditions = {Language = ["en"], Country = ["US"], Role = ["admin"]}
